--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
 	"name": "deer",
 	"version": "1.0.0",
 	"description": "Deer icon studio",
-	"main": "./build/Server.js",
+	"main": "./build/server.js",
 	"scripts": {
 		"storybook": "start-storybook -p 6006",
-		"start": "NODE_ENV=production node ./build/Server.js",
-		"start:dev": "NODE_ENV=production node ./build/Server.js",
-		"watch": "npm run compile && NODE_ENV=development node ./build/Server.js",
+		"start": "NODE_ENV=production node ./build/server.js",
+		"start:dev": "NODE_ENV=production node ./build/server.js",
+		"watch": "npm run compile && NODE_ENV=development node ./build/server.js",
 		"clean": "rm -rf ./build ./dist",
 		"test": "jest --watch",
 		"test:once": "jest",
@@ -40,75 +40,36 @@
 	"homepage": "https://github.com/xeuus/deer#readme",
 	"dependencies": {
 		"axios": "^0.18.0",
-		"connected-react-router": "^6.3.1",
 		"express": "^4.16.4",
-		"http-proxy": "^1.17.0",
-		"intlocalize": "^1.1.5",
-		"jbcollection": "^1.0.3",
-		"lodash": "^4.17.11",
-		"module-alias": "^2.2.0",
-		"react": "^16.8.1",
-		"react-dom": "^16.8.1",
-		"react-redux": "^6.0.0",
-		"react-router": "^4.3.1",
-		"react-router-dom": "^4.3.1",
-		"redux": "^4.0.1",
-		"redux-saga": "^1.0.1",
-		"ssrstore": "^1.6.2",
-		"xhttplayer": "^1.1.5",
-		"xrmodule": "^1.0.6"
+		"jobean": "^1.2.3"
 	},
 	"devDependencies": {
-		"@storybook/addon-info": "^5.0.10",
-		"@storybook/react": "^5.0.10",
-		"@types/storybook__react": "^4.0.1",
-		"@types/enzyme": "^3.1.18",
-		"@types/express": "^4.16.1",
-		"@types/jest": "^23.3.14",
-		"@types/js-cookie": "^2.2.1",
-		"@types/lodash": "^4.14.123",
-		"@types/node": "^10.12.26",
-		"@types/react": "^16.8.3",
-		"@types/react-dom": "^16.8.1",
-		"@types/react-redux": "^7.0.1",
-		"@types/react-router": "^4.4.4",
-		"@types/react-router-dom": "^4.3.1",
-		"@types/redux-saga": "^0.10.5",
-		"@types/webpack": "^4.4.24",
-		"@types/webpack-env": "^1.13.7",
-		"autoprefixer": "^9.4.7",
+		"@types/node": "^12.0.0",
+		"@types/react": "^16.8.17",
+		"@types/react-dom": "^16.8.4",
+		"@types/react-redux": "^7.0.8",
+		"@types/redux": "^3.6.0",
+		"@types/webpack-env": "^1.13.9",
+		"autoprefixer": "^9.5.1",
 		"awesome-typescript-loader": "^5.2.1",
-		"bootstrap": "^4.3.1",
 		"compression-webpack-plugin": "^2.0.0",
-		"css-loader": "^2.1.0",
-		"enzyme": "^3.8.0",
-		"enzyme-adapter-react-16": "^1.9.1",
-		"enzyme-to-json": "^3.3.5",
-		"file-loader": "^3.0.1",
-		"history": "^4.7.2",
-		"jest": "^24.1.0",
-		"jest-css-modules": "^1.1.0",
+		"css-loader": "^2.1.1",
 		"js-cookie": "^2.2.0",
-		"mini-css-extract-plugin": "^0.5.0",
-		"node-sass": "^4.11.0",
+		"mini-css-extract-plugin": "^0.6.0",
+		"module-alias": "^2.2.0",
+		"node-sass": "^4.12.0",
 		"optimize-css-assets-webpack-plugin": "^5.0.1",
 		"postcss-loader": "^3.0.0",
 		"postcss-rtl": "^1.3.3",
-		"react-hot-loader": "^4.6.5",
+		"react-hot-loader": "^4.8.4",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
 		"terser-webpack-plugin": "^1.2.3",
-		"ts-jest": "^23.10.5",
-		"ts-loader": "^5.3.3",
-		"tsc-watch": "^2.1.2",
-		"tsconfig-paths-jest": "0.0.1",
 		"tsconfig-paths-webpack-plugin": "^3.2.0",
-		"typescript": "^3.3.3",
-		"uglifyjs-webpack-plugin": "^2.1.1",
-		"url-loader": "^1.1.2",
-		"webpack": "^4.29.3",
-		"webpack-cli": "^3.2.3",
-		"webpack-dev-middleware": "^3.5.2",
-		"webpack-hot-middleware": "^2.24.3"
+		"typescript": "^3.4.5",
+		"webpack": "^4.31.0",
+		"webpack-cli": "^3.3.2",
+		"webpack-dev-middleware": "^3.6.2",
+		"webpack-hot-middleware": "^2.24.4"
 	}
 }
